# DataFix

./: .gitignore  README.md  demo.ipynb  requirements.txt  setup.cfg  setup.py
.ipynb_checkpoints/: README-checkpoint.md
datafix/: __init__.py
datafix/correct/divergences/: score_divergence.py
datafix/correct/divergences/ber_chevy/: Example.ipynb  get_weights.py  wrapper.py
datafix/correct/imputers/: datafix_correct.py  supervised_imputer.py
datafix/correct/src/divergences/: discriminator_divergence_estimator.py  dp_div.py  feebee_wrapper.py  ite_divergence.py  knn_divergence.py  ot_distances.py
datafix/correct/src/divergences/ber_chevy/: BER_estimator_KDtree.py  README.md
datafix/correct/src/divergences/feebee/methods/: ghp.py  kde.py  knn.py  knn_extrapolate.py  lr_model.py  onenn.py  timed_logger.py  utils.py
datafix/correct/src/divergences/feebee/misc/: README.md  analysis_notebook.ipynb  calculate_areas.py  collect_cifarn.sh  collect_results.py  config.json  estimate.py  export.py  generate_checkerboard.py  requirements.txt  run_analysis.py
datafix/correct/src/divergences/feebee/misc/transformations/: label_noise.py  nca.py  (+4 more)
datafix/correct/src/imputers/: datafix_correct.py
datafix/locate/: datafix_locate.py
datafix/locate/location/: _early_stopping.py  _filtering.py  _knee_location.py
datafix/locate/preprocessing/: _data_manipulation.py
datafix/locate/src/: datafix_locate.py
datafix/locate/src/location/: _knee_location.py  _misc.py
datafix/locate/src/preprocessing/: _transform_data.py
datafix/locate/utils/: _evaluation.py  _io.py
(+36 files in other folders)
