[metadata]
name = datafix
version = 0.1.0
author = Míriam Barrabés Torrella
author_email = miriambt@stanford.edu
license = CC BY-NC 4.0
license_files = LICENSE
description = DataFix: Toolkit for Feature Shift Detection and Correction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AI-sandbox/datafix
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    catboost>=1.2.2
    cvxpy>=1.4.2
    ite>=1.4.2
    joblib>=1.3.2
    kneed>=0.8.5
    matplotlib>=3.7.4
    numpy>=1.24.4
    pandas>=2.0.3
    scikit_learn>=1.2.2
    setuptools>=68.2.2
    torch>=2.2.0

python_requires = >=3.8